--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.9",
-    "codelyzer": "0.0.20",
+    "codelyzer": "^0.0.20",
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -38,9 +38,9 @@
     "karma-chrome-launcher": "0.2.3",
     "karma-jasmine": "0.3.8",
     "protractor": "3.3.0",
-    "ts-node": "0.5.5",
-    "tslint": "3.11.0",
+    "ts-node": "^0.5.5",
+    "tslint": "^3.11.0",
     "typescript": "1.8.10",
-    "typings": "0.8.1"
+    "typings": "^0.8.1"
   }
 }
